--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
             <li class="nav-link"><a href="#">Features</a></li>
           </ul>
           <ul class="nav--ul__two">
-            <li class="nav-link"><a href="#">Community</a></li>
+            <li class="nav-link"><a href="./blog.html">Community</a></li>
             <button class="login_btn"><a href="./login.html">Login</a></button>
           </ul>
         </nav>
