--- a/login.html
+++ b/login.html
@@ -61,7 +61,7 @@
                         </button>
                     </div>
                     <div class="sign-up">
-                        <h5>Don't have an account? <a href="#">Sign Up</a></h5>
+                        <h5>Don't have an account? <a href="index.html">Sign Up</a></h5>
                     </div>
                 </form>
                 <div class="image-holder">
