--- a/landingpage.html
+++ b/landingpage.html
@@ -9,7 +9,7 @@
       src="https://kit.fontawesome.com/5733a6f7bf.js"
       crossorigin="anonymous"
     ></script>
-    <script type="text/javascript" src="blog.js" defer></script>
+    <script type="text/javascript" src="../blog.js" defer></script>
   </head>
   <body>
     <main class="landingpage">
