Update and rename landingpage.html to index.html

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             inspiration
           </p>
           <div class="topimg-btns">
-            <a href="index.html">
+            <a href="signup.html">
               <button class="Register-btn">Register Now</button>
             </a>
             <a href="about.html">
