--- a/login.html
+++ b/login.html
@@ -93,7 +93,7 @@ console.log(data)
                         </button>
                     </div>
                     <div class="sign-up">
-                        <h5>Don't have an account? <a href="index.html">Sign Up</a></h5>
+                        <h5>Don't have an account? <a href="signup.html">Sign Up</a></h5>
                     </div>
                 </div>
                 <div class="image-holder">
